# syp

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: settings.py  urls.py
app/templates/: base.html  index.html
app/templates/plans/: add_event.html  event_attendee_request_form.html  event_detail.html  events.html  friends_event_list.html
app/templates/users/: add_friendship_request.html  friendship_request.html  friendship_requests.html  profile.html
plans/: admin.py  forms.py  models.py  serializers.py  views.py
plans/migrations/: 0001_initial.py  0002_rename_location_event_location_text_and_more.py
users/: admin.py  forms.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_friendshiprequest_comment.py  0003_user_is_email_faked_user_telegram_id.py
